# databricks_poc

./: deploy_job.py  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
databricks_project/: .env  pyproject.toml
databricks_project/.github/workflows/: deploy.yml
databricks_project/data_loader/: loader.py
extract_work/: job-config.json
extract_work/data_loader/: entrypoint.py  main.py
src/: __init__.py
src/dataloader/: load_data.py
