[tool.poetry]
name = "extract_work"
version = "0.1"
description = "test poc"
authors = ["shyam <shyam1011@gmail.com>"]
packages = [{ include = "extract_work" }]  # your source code folder

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pandas = ">2.2.0"
databricks-sql-connector = ">2.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
extract_work = "extract_work.data_loader.loader:main"
